# lightweaver

./: .gitignore  README.md
data/: monkey.txt  sample1.txt  sceen.txt  sceen2.txt  watch_tower.txt
scripts/: export.py
src/: CMakeLists.txt  LightWeaver.cpp  Octree.cpp  Octree.hpp  PhotonMap.hpp  Timer.hpp  Utils.hpp  bsptree.cpp  bsptree.hpp  camera.cpp  camera.hpp  kdNode.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  ray.cpp  ray.hpp  sceen.cpp  sceen.hpp  texture.cpp  texture.hpp  triangle.cpp  triangle.hpp  vec2f.hpp  vec3f.cpp  vec3f.hpp
